# daily-reports

./: .gitignore  README.md  local_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cleanup-emails.yml  daily-reports.yml  development.yml  full-deployment.yml  post-test-coverage-in-pr.yml  python-app.yml  test-all-commits.yml
src/: config.py  di_container.py  email.py  tasks.py  test_placeholder.py
src/core/: reports.py
src/gmail/: config.py  gmail_client.py
src/notion/: api_client.py  config.py  models.py  reports.py  test_models.py
src/notion/test/: test_models.py  test_reports.py
src/pokemon/: config.py  models.py  news_api_client.py  reports.py
src/report_senders/: config.py  email_reporter.py
src/reporters/: email_reporter.py
src/tasks/: daily_email_reports.py  email_cleaner.py  notion_daily_report.py
test/: test_config.py
