[project]
name = "daily-reports"
version = "0.1.0"
description = "A few daily automations to make my life easier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dependency-injector==4.41.0",
    "newsapi-python==0.2.7",
    "requests==2.31.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
test = [
    "htmlmin==0.1.12",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]
lint = [
    "flake8==6.1.0",
]

[project.optional-dependencies]
debug = ["ipdb==0.13.13"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
pythonpath = ["."]
